# threatclaw

./: .dockerignore  .env.example  .gitignore  AGENT_SOUL.toml  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  COVERAGE_PLAN.md  Cargo.toml  Dockerfile  Dockerfile.test  Dockerfile.worker  FEATURE_PARITY.md  HEARTBEAT.md  LICENSE-COMMERCIAL.md  LICENSE-PREMIUM.md  NOTICE  README.md  README.ru.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SKILLS_CATALOG.md  build.rs  clippy.toml  deny.toml  docker-compose.yml  release-plz.toml  threatclaw.bash  threatclaw.fish  threatclaw.toml  threatclaw.zsh
.cargo/: audit.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.next/: trace  trace-build
benches/: safety_check.rs  safety_pipeline.rs
community-skills/: README.md
dashboard/: Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
deploy/: setup.sh
docker/: .env.example  AGENT_SOUL.toml  Dockerfile  Dockerfile.dashboard  Dockerfile.db  Modelfile.threatclaw-forensic  Modelfile.threatclaw-l1  Modelfile.threatclaw-l2  Modelfile.threatclaw-l3  Modelfile.threatclaw-redsage  dashboard-entrypoint.sh  docker-compose.core.yml  docker-compose.dev.yml  docker-compose.yml  (+7 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_tool_params.rs
skills-src/skill-abuseipdb/: Cargo.toml  skill.json
skills-src/skill-abuseipdb/src/: lib.rs
skills-src/skill-email-audit/: Cargo.toml  skill.json
skills-src/skill-email-audit/src/: lib.rs
(+1132 files in other folders)
