[package]
name = "skill-email-audit"
version = "1.0.0"
edition = "2021"
description = "Email security audit (SPF/DKIM/DMARC) — ThreatClaw official skill"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
